Project2/style.css
body {
    background-color: #ffffe0;
}

hr {
border-top: 1px solid black;

}

header {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5px;
    overflow: hidden;
    margin-bottom: 20px;
}

.imgLogo {
    animation: zoomIn 1s linear infinite;
}

.h1Brand {
    animation: entrance 6s infinite;
}

.h4BrandSlogan {
    animation: entrance2 6s infinite;
}

header h1 {
    font-style: italic;
    color: #808008;
}

header div img {
    width: 100px;
    border: 2px solid #7f8000;
    border-radius: 20px;
}

header h1,
header h4 {
    margin: 0 0;
}

.headerBrandDescription {
    margin-left: 25px
}

.slideShowStage {
    width: 100%;
    overflow: hidden;
}

.slideShowContainer {
    width: 300%;
    color: white;
    height: 100%;
    animation: slideshow 20s infinite linear;

}

.slide {
    width: calc(100%/3);
    height: 100%;
    float: left;
    text-align: center;
}

.firstSlide {
    background-color: #808102;
}

.secondSlide {
    background-color: #3e3b0f;
}

.thirdSlide {
    background-color: #dec866;
    color: black;
}

.heroImageContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 75vh;
    background-image: url("images/intro_img2.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    position: relative;
    margin-bottom: 25px;
}

.heroText {
    background-color: #b4b2b3;
    width: 30%;
    left: 5%;
    position: absolute;
    border: 3px solid white;
    padding: 10px;
}

.oneByTwo {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
}

.imageWithText {
    background-image:  linear-gradient( 45deg, rgba(97, 97, 97, 0.66), rgba(175, 44, 44, 0.33), rgba(97, 97, 97,  0.33), rgba(228, 103, 103, 0.66)) ,url("images/intro_img1.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    filter: brightness(150%);
    opacity: .9;
}

p._inside {
    border: 1px solid #808102 ;
    color: white;
    width: 40%;
    padding: 20px;   
    text-shadow: 1px 1px 3px black;
    margin-left: 20px;
    margin-top: 20px;
    background-color: rgba(97, 97, 97, 0.15);
}

._box {
    width: 45vw;
    height: 35vh;
    background-color: rgba(97, 97, 97, 0.20);
}

._box div:last-child {
   color: #808102;
}

._box div {
    padding: 25px;
 }

.oneByThreeContainer{
    margin-top: 25px;
    width: 100%;
    display: flex;
   justify-content: space-evenly;
}

.productContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.child {
    margin-top: 0;
    margin-bottom: 8px;
  }

 .productContainer img {
    height: 200px;
 }

 .productName, .productType {
    font-weight: bold;
 }

 .productName {
    font-size: small;
    color: #808102
 }

.productSize {
    text-align: center;
    width: 250px;
    font-size: smaller;
}

.btnAddToBag {
    text-decoration: none; 
    font-size: smaller;
    color: white;
    background-color: black;
    padding: 10px;
}

footer {
    background-color: #232323;
    height: auto;
    width: 100%;
    font-family: Arial, Helvetica, sans-serif;
    color: white;
}

.topSection {
    display: flex;
    padding-top: 30px;
    align-items: center;
    justify-content: space-evenly;
}

.topSectionColumn {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.topSectionColumn p, .rightAlignedSection p {
    font-weight: bold;
}

.topSectionColumn  a {
    text-decoration: none;
    color: white;
    font-weight: lighter; 
    font-size: smaller;
}

._divider {
    padding-top: 30px;

}

.footerHr {
    border-top: 2px solid white;
    margin-left: 10%;
    margin-right: 10%;
}

.socialMedia img {
    width: 30px;
    margin: 10px;
}

.rightAlignedSection {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-right: 10%;
}

._bottomCenter {
    padding-top: 50px;
    padding-bottom: 5px;
    font-size: smaller;
    text-align: center;
}

@media (max-width: 600px) {
    .slide {
        font-size: small;
    }

    .headerBrandDescription {
        font-size: x-small;
    }

    .heroText, p._inside, ._box  {
        font-size: smaller;
    }

    .oneByThreeContainer {
        flex-direction: column;
    }

    .productContainer {
        margin-bottom: 50px;
    }

    .topSection {
        flex-direction: column;
        font-size: smaller;
    }

    .topSectionColumn {
        margin-bottom: 20px;
    }

    .rightAlignedSection {
        align-items: center;
        font-size: smaller;
        margin-right: 0%;
    }

    ._bottomCenter{
        font-size: x-small;
        padding: 5px;
    }
 
}

@keyframes zoomIn {

    0% {
        transform: scale(0.1);
        /* Start with a smaller scale */
    }

    75%,
    100% {
        transform: scale(1);
        /* Scale up to the original size */
    }
}

@keyframes entrance {
    0% {
        transform: translateY(-150%);
        /* Start from all the way at the top */
    }

    30% {
        transform: translateY(180%);
        /* Move to the bottom */
    }

    90%,
    100% {
        transform: translateY(0%);
        /* Settle in the normal position */
    }
}

@keyframes entrance2 {
    0% {
        transform: translateY(450%);
        /* Start from all the way at the bottom */
    }

    30% {
        transform: translateY(-450%);
        /* Move to the top */
    }

    90%,
    100% {
        transform: translateY(0%);
        /* Settle in the normal position */
    }
}

@keyframes slideshow {

    0%,
    20% {
        margin-left: -100%;
    }

    25%,
    45% {
        margin-left: 0%;
    }

    50%,
    70% {
        margin-left: -100%;
    }

    75%,
    95% {
        margin-left: -200%;
    }

    100% {
        margin-left: -100%;
    }
}

